<resources>
    <string name="app_name">ZoloAssignment</string>
    <string name="phone_number_hint">PHONE NUMBER</string>
    <string name="password_hint">PASSWORD</string>
    <string name="cta_login">LOG IN</string>
    <string name="cta_forgot_password">Forgot password?</string>
    <string name="cta_create_acc">Create account</string>
    <string name="forgot_password_msg">Forgot \n Password?</string>
    <string name="forgot_password_helper_msg">Please enter your register email</string>
    <string name="register">Register</string>
    <string name="register_helper_msg">Please register with zolo to continue</string>
    <string name="cta_register">Register</string>
    <string name="cta_truecaller">Autofill via truecaller</string>
    <string name="user_not_found_error">User not found, please register to continue.</string>
    <string name="invalid_credentials_error">Invalid password, please try again.</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="empty_mobile_error">Mobile number cannot be empty</string>
    <string name="mobile_already_exists_error">User with given mobile already exists.</string>
    <string name="email_already_exists_error">User with email already exists.</string>
    <string name="empty_name_error">Name cannot be empty</string>
    <string name="invalid_name_error">Invalid name</string>
    <string name="invalid_mobile_error">Invalid mobile number</string>
    <string name="empty_email_error">Email cannot be empty</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="email_hint">EMAIL</string>
    <string name="name_hint">NAME</string>
    <string name="referral_hint">REFERRAL CODE</string>
    <string name="profile">Profile</string>
    <string name="edit">EDIT PROFILE</string>
    <string name="update">UPDATE</string>
    <string name="logout">LOGOUT</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="invalid_password_error">Password should be atleast 6 digit long.</string>
</resources>
