<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_centerVertical="true"
        android:layout_margin="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/white"
            android:src="@drawable/ic_email"/>

        <android.support.design.widget.TextInputLayout
            android:layout_marginLeft="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_update"
        android:layout_below="@id/ll_email"
        android:layout_margin="24dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/cta_login"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:lineSpacingExtra="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:textStyle="bold"
        android:typeface="normal"
        android:text="@string/forgot_password_msg"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tv_forgot_password_helper_msg"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_below="@id/tv_forgot_password"
        android:layout_marginTop="56dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_helper_msg"/>


</RelativeLayout>