<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto">

    <me.henrytao.smoothappbarlayout.widget.NestedScrollView
        android:id="@+id/nsv_login"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="@color/white"
                    android:src="@drawable/ic_call"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_hint"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="@color/white"
                    android:src="@drawable/ic_key"/>

                <android.support.design.widget.TextInputLayout
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white"
                    android:layout_marginLeft="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cta_login"
                android:background="@color/colorAccent"/>

            <Button
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textCapSentences"
                android:textSize="14sp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/cta_forgot_password"/>

            <Button
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#40BAE8"
                android:text="@string/cta_create_acc"
                android:textColor="@color/white"/>
        </LinearLayout>

    </me.henrytao.smoothappbarlayout.widget.NestedScrollView>
    
    <me.henrytao.smoothappbarlayout.SmoothAppBarLayout
        app:sabl_target_id="@id/nsv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed|snap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:src="@drawable/login"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </me.henrytao.smoothappbarlayout.SmoothAppBarLayout>

</android.support.design.widget.CoordinatorLayout>